Actualiza enlaces de bases de datos

--- a/diapos/RadiacionSolar_BasesDatos.tex
+++ b/diapos/RadiacionSolar_BasesDatos.tex
@@ -1,4 +1,4 @@
-% Created 2024-01-27 sáb 18:44
+% Created 2025-02-01 sáb 11:53
 % Intended LaTeX compiler: pdflatex
 \documentclass[aspectratio=169, usenames,svgnames,dvipsnames]{beamer}
 \usepackage[utf8]{inputenc}
@@ -56,16 +56,15 @@
  pdftitle={Bases de Datos de Radiación Solar},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.1 (Org mode 9.6.11)}, 
+ pdfcreator={Emacs 29.4 (Org mode 9.7.16)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
-
 \section{Introducción}
-\label{sec:org11ab20c}
+\label{sec:orgf59db25}
 
-\begin{frame}[label={sec:orgc5321bc}]{Radiación Solar y Sistemas Fotovoltaicos}
+\begin{frame}[label={sec:org92c7559}]{Radiación Solar y Sistemas Fotovoltaicos}
 \begin{itemize}
 \item La \alert{energía producida} por un sistema fotovoltaico depende principalmente de la \alert{radiación incidente} en el generador.
 
@@ -76,8 +75,7 @@
 \includegraphics[width=.9\linewidth]{../figs/GCPVScheme.pdf}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org667e636}]{La radiación solar no se puede calcular analíticamente}
+\begin{frame}[label={sec:org0248613}]{La radiación solar no se puede calcular analíticamente}
 \begin{itemize}
 \item La radiación solar que alcanza la superficie terrestre es el resultado de complejas interacciones en la atmósfera.
 \item Para estimar la radiación se necesitan medidas terrestres o imágenes de satélite.
@@ -86,8 +84,7 @@
 \includegraphics[height=0.5\textheight]{../figs/SolarRadiationComponents_NREL.png}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org4adbf18}]{Ángulo de Inclinación}
+\begin{frame}[label={sec:org54e267d}]{Ángulo de Inclinación}
 \begin{itemize}
 \item Los generadores FV tienen un \alert{ángulo de inclinación positivo} para maximizar el rendimiento.
 \item Este ángulo depende de la \alert{latitud} del lugar y de la \alert{aplicación del sistema}.
@@ -97,24 +94,20 @@
 \includegraphics[height=0.5\textheight]{../figs/PVUrban.png}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:orga97907a}]{Bases de Datos de Radiación Solar}
+\begin{frame}[label={sec:org592f1eb}]{Bases de Datos de Radiación Solar}
 \begin{itemize}
 \item Por tanto, es inviable mantener una base de datos de radiación solar \alert{incidente}.
 \item Las \alert{bases de datos} registran radiación en el \alert{plano horizontal}.
 \item La estimación de la radiación incidente en el plano inclinado requiere un \alert{procedimiento de transposición}.
 \end{itemize}
 \end{frame}
-
-
-\begin{frame}[label={sec:orga5c2d1e}]{Variabilidad Temporal y Espacial}
+\begin{frame}[label={sec:org1ed066d}]{Variabilidad Temporal y Espacial}
 \begin{itemize}
 \item La irradiancia solar extraterrestre depende de la latitud y el instante temporal (\emph{proceso determinista}).
 \item La irradiancia solar incidente en la superficie terrestre es resultado de la interacción con la atmósfera cambiante: \alert{variabilidad temporal y espacial} (\emph{proceso estocástico}).
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orgf7d38fe}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org7e5094a}]{Variabilidad Temporal}
 Variabilidad de la irradiación diaria, mensual y anual durante el período comprendido entre 2001-2008 en Carmona, Sevilla
 \begin{center}
 \includegraphics[height=0.8\textheight]{../figs/VariabilidadRadiacionDiario.pdf}
@@ -122,8 +115,7 @@ Variabilidad de la irradiación diaria, mensual y anual durante el período comp
 
 \nocite{Perpinan2009}
 \end{frame}
-
-\begin{frame}[label={sec:org7f7a6c6}]{Variabilidad Temporal}
+\begin{frame}[label={sec:org9ec1140}]{Variabilidad Temporal}
 \[
 \sigma_{\overline{G}}=\frac{\sigma_{G}}{\sqrt{N}}
 \]
@@ -142,8 +134,7 @@ Variabilidad de la irradiación diaria, mensual y anual durante el período comp
 \end{itemize}
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org83a05b2}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org9ea5115}]{Variabilidad Espacial}
 \begin{center}
 \includegraphics[width=0.9\textwidth]{../figs/SpatialVariability.jpg}
 \end{center}
@@ -154,16 +145,14 @@ COV = 1/G_p \sqrt{\frac{\sum_1^{n}(G_p^2 - G_i^2)}{n}}
 
 \nocite{Gueymard.Wilcox2011a}
 \end{frame}
-
-\begin{frame}[label={sec:org3e4aa3d}]{Variabilidad Espacial}
+\begin{frame}[label={sec:org6b2909c}]{Variabilidad Espacial}
 \begin{center}
 \begin{center}
 \includegraphics[height=0.9\textheight]{../figs/SpatialVariability_Annual.jpg}
 \end{center}
 \end{center}
 \end{frame}
-
-\begin{frame}[label={sec:org641193f}]{Estimación a partir de Medidas}
+\begin{frame}[label={sec:orgafafe0c}]{Estimación a partir de Medidas}
 \begin{itemize}
 \item Para estimar la radiación incidente es necesario contar con:
 \begin{itemize}
@@ -172,8 +161,7 @@ COV = 1/G_p \sqrt{\frac{\sum_1^{n}(G_p^2 - G_i^2)}{n}}
 \end{itemize}
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org86439d6}]{Fuentes de datos}
+\begin{frame}[label={sec:orgfc47237}]{Fuentes de datos}
 \begin{itemize}
 \item \alert{Estaciones meteorológicas}
 \begin{itemize}
@@ -212,13 +200,12 @@ COV = 1/G_p \sqrt{\frac{\sum_1^{n}(G_p^2 - G_i^2)}{n}}
 \end{itemize}
 \end{itemize}
 \end{frame}
-
 \section{Estaciones Meteorológicas}
-\label{sec:orga8b4bbe}
+\label{sec:orgf1d009a}
 
 \subsection{Fundamentos}
-\label{sec:org77fcab4}
-\begin{frame}[label={sec:orga3d4bc5}]{Medida directa}
+\label{sec:orgc896739}
+\begin{frame}[label={sec:orgee8ef95}]{Medida directa}
 La medida directa de radiación solar se realiza con un piranómetro.
 \begin{columns}
 \begin{column}{0.4\columnwidth}
@@ -241,8 +228,7 @@ La medida directa de radiación solar se realiza con un piranómetro.
 \end{column}
 \end{columns}
 \end{frame}
-
-\begin{frame}[label={sec:orgb89ca53}]{Medida directa}
+\begin{frame}[label={sec:orgcce2f85}]{Medida directa}
 \begin{block}{La red de estaciones que miden directamente radiación es escasa para estimaciones precisas en regiones grandes}
 \begin{itemize}
 \item Un piranómetro requiere mantenimiento y calibración frecuente.
@@ -251,8 +237,7 @@ las que miden temperatura ambiente y precipitación (1:500).
 \end{itemize}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org6f14fca}]{Modelos empíricos}
+\begin{frame}[label={sec:orgb51592e}]{Modelos empíricos}
 Frente a la baja densidad de estaciones con medida directa de radiación se emplean modelos empíricos
 
 \begin{itemize}
@@ -271,8 +256,7 @@ con medidas de radiación.
 interpolar para otras localizaciones.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org18112fa}]{Ejemplos de modelos empíricos}
+\begin{frame}[label={sec:orgbca7731}]{Ejemplos de modelos empíricos}
 \begin{itemize}
 \item Radiación y Horas de Brillo (Angstrom y Prescott)
 \end{itemize}
@@ -299,19 +283,15 @@ G(0) = a \left(1 - \exp(-b \Delta T^c)\right) \cdot B_o(0)
 
 \nocite{Antonanzas-Torres.Sanz-Garcia.ea2013}
 \end{frame}
-
-
 \subsection{Fuentes de Datos}
-\label{sec:org6cb66f2}
+\label{sec:org4eb243c}
 
-\begin{frame}[label={sec:orgd8fd6c8}]{Wiki con recursos}
+\begin{frame}[label={sec:orgd959d49}]{Wiki con recursos}
 \begin{block}{}
 \url{https://github.com/oscarperpinan/mds/wiki}
 \end{block}
 \end{frame}
-
-
-\begin{frame}[label={sec:org34e27d3}]{Baseline Surface Radiation Network}
+\begin{frame}[label={sec:orga9c814e}]{Baseline Surface Radiation Network}
 \begin{block}{\url{http://www.bsrn.awi.de/}}
 \begin{itemize}
 \item BSRN proporciona datos casi continuos, a largo plazo, observados in situ, de la superficie terrestre e irradiancias de banda ancha (infrarrojo solar y térmico) de una red de más de 50 sitios globalmente diversos.
@@ -326,8 +306,7 @@ G(0) = a \left(1 - \exp(-b \Delta T^c)\right) \cdot B_o(0)
 \end{center}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org3b435cd}]{Measurement and Instrumentation Data Center NREL}
+\begin{frame}[label={sec:org1a96468}]{Measurement and Instrumentation Data Center NREL}
 Radiación global, directa y difusa (y otras variables) con muestreo de
   1 min en diversas localidades de EEUU.
 
@@ -339,11 +318,8 @@ Radiación global, directa y difusa (y otras variables) con muestreo de
 \end{center}
 \end{center}
 \end{frame}
-
-
-
-\begin{frame}[label={sec:orgc06e0d7}]{SIAR}
-\begin{block}{\url{https://eportal.mapa.gob.es/websiar/Inicio.aspx}}
+\begin{frame}[label={sec:org4e266ab}]{SIAR}
+\begin{block}{\url{https://servicio.mapa.gob.es/websiar/}}
 \begin{itemize}
 \item El Sistema de Información Agroclimática para el Regadío (SiAR)
 registra datos agroclimáticos relacionados con demanda hídrica de
@@ -361,8 +337,7 @@ las zonas de riego.
 \end{center}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:orgca604fc}]{SIAR}
+\begin{frame}[label={sec:org1da8f56}]{SIAR}
 \begin{block}{Sensores}
 \begin{itemize}
 \item Temperatura y Humedad
@@ -379,9 +354,7 @@ las zonas de riego.
 \end{center}
 \end{block}
 \end{frame}
-
-
-\begin{frame}[label={sec:orgc4f5513}]{AEMET}
+\begin{frame}[label={sec:org8ba5cd6}]{AEMET}
 \begin{block}{\href{http://www.aemet.es/es/eltiempo/observacion/radiacion}{Radiación}}
 \begin{itemize}
 \item Alrededor de 30 estaciones en todo el territorio.
@@ -389,7 +362,6 @@ las zonas de riego.
 \item Sólo gráficas.
 \end{itemize}
 \end{block}
-
 \begin{block}{\href{http://www.aemet.es/es/eltiempo/observacion/ultimosdatos}{Estaciones \guillemotleft{}convencionales\guillemotright{}}}
 \begin{itemize}
 \item Presión, temperatura, viento, humedad, lluvia.
@@ -397,8 +369,7 @@ las zonas de riego.
 \end{itemize}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org9928da7}]{Redes de Comunidades Autónomas}
+\begin{frame}[label={sec:orgbc2f349}]{Redes de Comunidades Autónomas}
 \begin{itemize}
 \item \href{https://www.meteogalicia.gal/observacion/estacions/estacions.action?request\_locale=es}{Meteogalicia}
 \item \href{http://meteo.navarra.es/estaciones/mapadeestaciones.cfm}{MeteoNavarra}
@@ -407,15 +378,13 @@ las zonas de riego.
 \item \href{http://www.juntadeandalucia.es/medioambiente/servtc5/WebClima/?lr\%3Dlang\_es}{Andalucía}
 \end{itemize}
 \end{frame}
-
-
 \section{Imágenes de Satélite}
-\label{sec:org21d174b}
+\label{sec:orgb62d51b}
 
 \subsection{Fundamentos}
-\label{sec:orgd21043a}
+\label{sec:org1dd95d2}
 
-\begin{frame}[label={sec:orgd17bd01}]{Fundamentos}
+\begin{frame}[label={sec:org1104b50}]{Fundamentos}
 \begin{itemize}
 \item Los satélites meteorológicos están equipados con \alert{radiómetros}
 (sensores de radiación electromagnética a diferentes frecuencias)
@@ -432,8 +401,7 @@ superficie a partir de la información de los diferentes canales del
 radiómetro.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:org4f4b97f}]{Satelites Geoestacionarios Europeos: Meteosat}
+\begin{frame}[label={sec:org1c99b9f}]{Satelites Geoestacionarios Europeos: Meteosat}
 \begin{itemize}
 \item \alert{MFG}: Meteosat First Generation (7 satélites)
 \begin{itemize}
@@ -456,9 +424,7 @@ radiómetro.
 \end{center}
 \end{center}
 \end{frame}
-
-
-\begin{frame}[label={sec:org651c5ec}]{Procedimientos: Heliosat-2}
+\begin{frame}[label={sec:org7a31364}]{Procedimientos: Heliosat-2}
 \begin{block}{Pasos}
 \begin{itemize}
 \item Establecer \alert{albedo de referencia} (\emph{suelo}).
@@ -466,7 +432,6 @@ radiómetro.
 \item Estimar radiación en superficie a partir de cobertura nubosa y \alert{modelo de cielo claro}.
 \end{itemize}
 \end{block}
-
 \begin{block}{}
 \begin{itemize}
 \item Empleado para base HelioClim
@@ -477,8 +442,7 @@ radiómetro.
 \nocite{Rigollier.Lefevre.ea2004}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:org482070b}]{Procedimientos: CM SAF}
+\begin{frame}[label={sec:org7ca1bf2}]{Procedimientos: CM SAF}
 \alert{Fundamento}
 \begin{itemize}
 \item Se emplea el modelo libRadtran (\alert{Radiative Transfer Model, RTM)}, para
@@ -490,8 +454,7 @@ irradiancia extra-atmosférica por la \alert{transmitancia atmosférica
 determinada interpolando en la LUT}.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orge94b0d0}]{Procedimientos: CM SAF}
+\begin{frame}[label={sec:orgd8f144e}]{Procedimientos: CM SAF}
 \begin{itemize}
 \item \alert{Dos LUTs}: cielo nuboso, cielo claro.
 \begin{itemize}
@@ -511,10 +474,7 @@ determinada interpolando en la LUT}.
 
 \nocite{Mueller.Matsoukas.ea2009}
 \end{frame}
-
-
-
-\begin{frame}[label={sec:org7e0b795}]{Procedimientos: LSA SAF}
+\begin{frame}[label={sec:org5ac8af8}]{Procedimientos: LSA SAF}
 \begin{itemize}
 \item Generación de \alert{máscara de nubes} a partir de imagen usando algoritmo de \href{http://www.nwcsaf.org/}{NWC-SAF}.
 \item Para \alert{zonas sin nubes}: modelo de cielo claro sin usar datos de imagen.
@@ -524,19 +484,15 @@ determinada interpolando en la LUT}.
 
 \nocite{Geiger.Meurey.ea2008}
 \end{frame}
-
-
 \subsection{Fuentes de Datos}
-\label{sec:orga19bbab}
+\label{sec:org12ffa83}
 
-\begin{frame}[label={sec:org7126fc0}]{Wiki con recursos}
+\begin{frame}[label={sec:orgd08bb93}]{Wiki con recursos}
 \begin{block}{}
 \url{https://github.com/oscarperpinan/mds/wiki}
 \end{block}
 \end{frame}
-
-
-\begin{frame}[label={sec:orgfd8a351}]{SSE-NASA}
+\begin{frame}[label={sec:org4f409a1}]{SSE-NASA}
 \begin{block}{Surface meteorology and Solar Energy (SSE)}
 \begin{itemize}
 \item 200 parámetros meteorológicos y de energía solar derivados de imágenes de satélite.
@@ -548,8 +504,7 @@ determinada interpolando en la LUT}.
 \url{https://power.larc.nasa.gov/}
 \end{block}
 \end{frame}
-
-\begin{frame}[label={sec:orgf39a39c}]{EUMETSAT - SAF}
+\begin{frame}[label={sec:org1e4eb7e}]{EUMETSAT - SAF}
 \begin{itemize}
 \item \alert{\href{http://www.eumetsat.int}{EUMETSAT}} es la agencia europea de satélites en operación, para la monitorización de la meteorología, clima y el medio ambiente.
 \item \alert{\href{https://www.eumetsat.int/about-us/satellite-application-facilities-safs}{Satellite Application Facilities} (SAFs)}
@@ -559,8 +514,7 @@ determinada interpolando en la LUT}.
 \end{itemize}
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orgf365919}]{SAFs}
+\begin{frame}[label={sec:orgc7e4c73}]{SAFs}
 \begin{itemize}
 \item \href{https://wui.cmsaf.eu/safira/action/viewProduktSearch}{SAF on Climate Monitoring (CM SAF)}: datos derivados de imágenes de satélite adecuados para la monitorización del clima.
 
@@ -573,8 +527,7 @@ determinada interpolando en la LUT}.
 \item \href{https://landsaf.ipma.pt/en/}{SAF on Land Surface Analysis} (LSA SAF): genera, archiva y distribuye productos operacionales con un conjunto de parámetros relacionados con la radiación en superficie, la evotranspiración, cobertura vegetal e incendios.
 \end{itemize}
 \end{frame}
-
-\begin{frame}[label={sec:orgf22c515}]{SAFs: Radiación}
+\begin{frame}[label={sec:org0052685}]{SAFs: Radiación}
 \begin{itemize}
 \item \alert{CM SAF}: Surface incoming shortwave radiation (\href{https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=22482\&fid=36}{Daily SIS}, \href{https://wui.cmsaf.eu/safira/action/viewProduktDetails?eid=22483\&fid=36}{Monthly SIS})
 
@@ -585,11 +538,10 @@ determinada interpolando en la LUT}.
 \item \alert{LSA SAF}: Down-welling surface short-wave radiation flux (\href{https://landsaf.ipma.pt/en/products/longwave-shortwave-radiation/dssf/}{DSSF})
 \end{itemize}
 \end{frame}
-
 \section{Métodos híbridos}
-\label{sec:org87662f2}
+\label{sec:orgb2034ee}
 
-\begin{frame}[label={sec:org8c45370}]{Interpolación Espacial}
+\begin{frame}[label={sec:org273661b}]{Interpolación Espacial}
 \begin{block}{\alert{Objetivo}: mejorar la resolución espacial de medidas dispersas}
 \begin{itemize}
 \item \alert{Inverse Distance Weighting (IDW)}: determinista (los pesos \(w_i\) son una función inversa de la distancia.)
@@ -614,9 +566,7 @@ determinada interpolando en la LUT}.
 \nocite{Bojanowski.Vrieling.ea2013}
 \end{block}
 \end{frame}
-
-
-\begin{frame}[label={sec:org3281a5d}]{Corrección por topografía}
+\begin{frame}[label={sec:orga05aaa2}]{Corrección por topografía}
 \begin{center}
 \begin{center}
 \includegraphics[width=0.9\textwidth]{../figs/downscaling.pdf}
@@ -635,8 +585,7 @@ determinada interpolando en la LUT}.
 \nocite{Antonanzas-Torres.MartinezdePison.ea2013}
 \nocite{Hofierka.Suri2002}
 \end{frame}
-
-\begin{frame}[label={sec:org4e6327d},fragile]{PVGIS - \texttt{r.sun}}
+\begin{frame}[label={sec:org884d5d5},fragile]{PVGIS - \texttt{r.sun}}
  \begin{block}{\url{https://re.jrc.ec.europa.eu/pvg\_tools/en/tools.html}}
 \begin{itemize}
 \item Datos de radiación en el plano horizontal de CM-SAF
@@ -644,10 +593,9 @@ determinada interpolando en la LUT}.
 \end{itemize}
 \end{block}
 \end{frame}
-
 \section{Control de calidad}
-\label{sec:orgdfc4881}
-\begin{frame}[label={sec:org0385a39}]{Introducción}
+\label{sec:org21c92c1}
+\begin{frame}[label={sec:org424d148}]{Introducción}
 \begin{block}{Las medidas recogidas por estaciones meteorológicas se deben filtrar para eliminar datos erróneos.}
 \begin{itemize}
 \item Límites Físicos
@@ -656,11 +604,9 @@ determinada interpolando en la LUT}.
 \end{itemize}
 \end{block}
 \end{frame}
-
-
 \subsection{Límites físicos}
-\label{sec:orge196355}
-\begin{frame}[label={sec:orge6e7794}]{Irradiación Diaria}
+\label{sec:orgff99d10}
+\begin{frame}[label={sec:org572b6a8}]{Irradiación Diaria}
 \begin{itemize}
 \item La radiación global en el plano horizontal debe ser inferior a la extraterrestre (\(K_{td} \leq 1\))
 \end{itemize}
@@ -681,8 +627,7 @@ K_{td} = \frac{G_d(0)}{B_{od}(0)} \geq 0.03
 
 \nocite{Younes.Claywell.ea2005, Estevez.Gavilan.ea2011, Geiger.Diabate.ea2002}
 \end{frame}
-
-\begin{frame}[label={sec:org359f3f9}]{Irradiancia (intradiaria)}
+\begin{frame}[label={sec:org23c9e4a}]{Irradiancia (intradiaria)}
 \begin{itemize}
 \item El índice de claridad debe ser inferior a 1 cuando la altura solar es suficiente:
 \end{itemize}
@@ -702,13 +647,11 @@ G \geq 0  \text{ si } \gamma_s \leq 10\degree
 
 \nocite{Journee.Bertrand2011}
 \end{frame}
-
 \subsection{Tests de variabilidad}
-\label{sec:orga59091e}
+\label{sec:org8ca257a}
 
-\begin{frame}[label={sec:orgfe0ecb5}]{Tests de variabilidad}
+\begin{frame}[label={sec:orgfdb2c27}]{Tests de variabilidad}
 Se realizan sobre medidas de \alert{irradiancia}.
-
 \begin{block}{Test de persistencia}
 Cuando un sensor falla proporciona un valor constante (baja desviación estándar). Si funciona de forma intermitente, la variabilidad puede ser muy alta.
 \[
@@ -716,7 +659,6 @@ Cuando un sensor falla proporciona un valor constante (baja desviación estánda
 \]
 La media y la desviación estándar se calculan con todas las muestras de un día completo.
 \end{block}
-
 \begin{block}{Test de rampas}
 Comprueba la existencia de saltos excesivos de irradiancia entre instantes sucesivos.
 \[
@@ -724,10 +666,9 @@ Comprueba la existencia de saltos excesivos de irradiancia entre instantes suces
 \]
 \end{block}
 \end{frame}
-
 \subsection{Coherencia espacial}
-\label{sec:org4dad102}
-\begin{frame}[label={sec:org2d0fa06}]{Planteamiento}
+\label{sec:org5fb7cc1}
+\begin{frame}[label={sec:org82b6a40}]{Planteamiento}
 \begin{itemize}
 \item Las medidas de una estación se pueden comparar con las recogidas por estaciones cercanas.
 \item Esta comprobación debe realizarse con \alert{datos agregados} (diarios) (la variabilidad espacial intradiaria puede ser alta)
@@ -736,8 +677,7 @@ Comprueba la existencia de saltos excesivos de irradiancia entre instantes suces
 
 \nocite{Journee.Bertrand2011}
 \end{frame}
-
-\begin{frame}[label={sec:orgb9b4900}]{Procedimiento}
+\begin{frame}[label={sec:org39f56c0}]{Procedimiento}
 \begin{itemize}
 \item Estimamos la irradiación en el lugar, \(x_0\), con la interpolación espacial de las estaciones cercanas, \(x_i\).
 \[
@@ -757,9 +697,7 @@ Los pesos \(w_i\) son una función inversa de la distancia \(d\) entre las estac
 \item La diferencia absoluta debe estar por debajo de un límite (p.ej. 50\%)
 \end{itemize}
 \end{frame}
-
-
-\begin{frame}[label={sec:orgf8c4ac5}]{Métricas para diferencias}
+\begin{frame}[label={sec:org962a1d0}]{Métricas para diferencias}
 \begin{itemize}
 \item Mean Bias Difference (MBD), diferencia media (indica si la medida, X,  está por encima o debajo de la referencia, \(R\)):
 \end{itemize}
